--- a/BarcodeScanner/KPTAudioPlayerViewController.xib
+++ b/BarcodeScanner/KPTAudioPlayerViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KPTAudioPlayerViewController">
             <connections>
                 <outlet property="languages" destination="2iw-Y0-YMg" id="vC6-bm-h2v"/>
+                <outlet property="languagesHolderView" destination="gaU-7i-QCo" id="T3z-Cd-V5a"/>
                 <outlet property="progressBar" destination="xUy-Sy-fYh" id="KXX-df-aXQ"/>
                 <outlet property="timeLabel" destination="MXF-S1-qk0" id="zcD-Aa-4C5"/>
                 <outlet property="view" destination="iN0-l3-epB" id="gLs-3M-Rzh"/>
@@ -21,6 +22,11 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <webView contentMode="scaleToFill" id="RdQ-Dt-iVv" customClass="TestIOWebview">
+                    <rect key="frame" x="17" y="143" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                </webView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Volume" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TLV-rT-ZXc">
                     <rect key="frame" x="96" y="75" width="66" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -49,12 +55,15 @@
                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" id="fjY-IR-9nA">
                     <rect key="frame" x="7" y="98" width="245" height="31"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <connections>
+                        <action selector="changeVolume:" destination="-1" eventType="valueChanged" id="hpS-jv-SUN"/>
+                    </connections>
                 </slider>
                 <view contentMode="scaleToFill" id="gaU-7i-QCo">
-                    <rect key="frame" x="0.0" y="383" width="320" height="140"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <rect key="frame" x="0.0" y="495" width="320" height="140"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <pickerView contentMode="scaleToFill" id="2iw-Y0-YMg">
+                        <pickerView hidden="YES" contentMode="scaleToFill" id="2iw-Y0-YMg">
                             <rect key="frame" x="0.0" y="30" width="320" height="110"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <connections>
@@ -65,7 +74,11 @@
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="z9c-yn-4oE">
                             <rect key="frame" x="15" y="0.0" width="290" height="30"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <state key="normal" title="Languages"/>
+                            <state key="normal" title="Show Languages"/>
+                            <state key="selected" title="Hide Languages"/>
+                            <connections>
+                                <action selector="languagesPressed:" destination="-1" eventType="touchUpInside" id="EAR-Ex-3jI"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -74,12 +87,19 @@
                     <rect key="frame" x="108" y="534" width="105" height="30"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <state key="normal" title="Disconnect"/>
+                    <connections>
+                        <action selector="disconnectPressed:" destination="-1" eventType="touchUpInside" id="VYu-kH-y9D"/>
+                    </connections>
                 </button>
-                <webView contentMode="scaleToFill" id="RdQ-Dt-iVv" customClass="TestIOWebview">
-                    <rect key="frame" x="17" y="143" width="240" height="128"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dvy-hr-mVi">
+                    <rect key="frame" x="125" y="357" width="70" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                </webView>
+                    <state key="normal" title="Mute"/>
+                    <state key="selected" title="Un Mute"/>
+                    <connections>
+                        <action selector="mutePressed:" destination="-1" eventType="touchUpInside" id="aGG-HB-EJJ"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
